# aredevscooked

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  test_anthropic.py
.github/workflows/: daily-collection.yml  deploy-pages.yml
data/: stocks.db
data/processed/: baselines.json  metrics_history.json  metrics_latest.json
docs/: GEMINI_API.md  GITHUB_ACTIONS.md  PROJECT_STRUCTURE.md
scripts/: backfill_baselines.py  debug_gemini_response.py  run_collection.py  serve_website.py  test_gemini.py
src/aredevscooked/: __init__.py  config.py  gemini_prompts.py
src/aredevscooked/collectors/: gemini_collector.py  stock_collector.py
src/aredevscooked/generators/: badge_generator.py
src/aredevscooked/processors/: headcount_processor.py  jobs_processor.py  stock_processor.py
src/aredevscooked/utils/: config.py  gemini_prompts.py
tests/: conftest.py  test_config.py  test_gemini_prompts.py  test_orchestration.py
tests/fixtures/: mock_gemini_responses.py
tests/test_collectors/: test_gemini_collector.py  test_gemini_collector_integration.py  test_stock_collector.py
tests/test_generators/: test_badge_generator.py
tests/test_processors/: test_headcount_processor.py  test_jobs_processor.py  test_stock_processor.py
website/: index.html  metrics_latest.json  script.js  styles.css
