[project]
name = "aredevscooked"
version = "0.1.0"
description = "Track IT job market health through company headcounts, stock prices, and job postings"
readme = "README.md"
authors = [
    { name = "Will Sorenson", email = "wil.sorenson@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.0.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
]

[project.scripts]
aredevscooked = "aredevscooked.cli:main"

[tool.pytest.ini_options]
addopts = "--ignore=tests/test_collectors/test_gemini_collector_integration.py"
markers = [
    "integration: marks tests as integration tests requiring API credentials",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
